--- a/src/pages/UserInterface/userInterface.scss
+++ b/src/pages/UserInterface/userInterface.scss
@@ -156,3 +156,23 @@ body {
     }
   }
 }
+.logingButtonConatiner {
+  height: 50px;
+}
+.loadingScreen {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #2a9d8f;
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  .loadingText {
+    font-size: 30px;
+    font-weight: 600;
+  }
+}
